--- a/place.html
+++ b/place.html
@@ -42,14 +42,14 @@
         </section>
 
         <section class="weather-section">
-            <h2>Weather <span class="weather-icon">⛅</span></h2>
+            <h2>Weather <span class="weather-icon" aria-hidden="true">⛅</span></h2>
             <div class="weather-grid">
                 <p><strong>Temperature:</strong> <span id="temperature">28</span> °C</p>
                 <p><strong>Conditions:</strong> Partly Cloudy</p>
                 <p><strong>Wind:</strong> <span id="wind-speed">12</span> km/h</p>
                 <p><strong>Wind Chill:</strong> <span id="wind-chill">N/A</span></p>
             </div>
-            <img src="images/weather.svg" alt="Icono del clima" class="mobile-weather-icon">
+            <img src="images/weather.svg" alt="Ícono de clima parcialmente nublado" class="mobile-weather-icon">
         </section>
     </main>
 
