--- a/place.html
+++ b/place.html
@@ -21,12 +21,12 @@
     </header>
 
     <main>
-        <!-- Imagen de fondo con boxes superpuestos -->
+        
         <div class="hero-container">
             <picture class="hero-image">
                 <source media="(min-width: 768px)" srcset="images/peten-desktop.webp">
                 <source media="(max-width: 767px)" srcset="images/peten-mobile.webp">
-                <img src="images/peten-desktop.webp" alt="Vista de la selva de Petén, Guatemala">
+                <img src="images/peten-desktop.webp" alt="Peten View, Guatemala">
             </picture>
 
             <div class="data-box">
@@ -51,7 +51,7 @@
                     <p><strong>Wind:</strong> <span id="wind-speed">12</span> km/h</p>
                     <p><strong>Wind Chill:</strong> <span id="wind-chill">N/A</span></p>
                 </div>
-                <img src="images/weather.svg" alt="Icono del clima" class="mobile-weather-icon">
+                <img src="images/weather.svg" alt="Icono Weather" class="mobile-weather-icon">
             </div>
         </div>
     </main>
