--- a/form.html
+++ b/form.html
@@ -19,11 +19,13 @@
 
         <fieldset>
             <legend>Overall Rating</legend>
-            <label><input type="radio" name="rating" value="1" required> ★</label>
-            <label><input type="radio" name="rating" value="2"> ★★</label>
-            <label><input type="radio" name="rating" value="3"> ★★★</label>
-            <label><input type="radio" name="rating" value="4"> ★★★★</label>
-            <label><input type="radio" name="rating" value="5"> ★★★★★</label>
+            <div class="rating-options">
+                <label><input type="radio" name="rating" value="1" required> ★</label>
+                <label><input type="radio" name="rating" value="2"> ★★</label>
+                <label><input type="radio" name="rating" value="3"> ★★★</label>
+                <label><input type="radio" name="rating" value="4"> ★★★★</label>
+                <label><input type="radio" name="rating" value="5"> ★★★★★</label>
+            </div>
         </fieldset>
 
         <label for="installation">Date of Installation</label>
@@ -31,10 +33,12 @@
 
         <fieldset>
             <legend>Which features did you find useful in the product?<br><small>(Check all that apply)</small></legend>
-            <label><input type="checkbox" id="durability" name="features" value="Durability"> Durability</label><br>
-            <label><input type="checkbox" id="ease" name="features" value="Ease of Use"> Ease of Use</label><br>
-            <label><input type="checkbox" id="performance" name="features" value="Performance"> Performance</label><br>
-            <label><input type="checkbox" id="design" name="features" value="Design"> Design</label>
+            <div class="features-options">
+                <label><input type="checkbox" id="durability" name="features" value="Durability"> Durability</label>
+                <label><input type="checkbox" id="ease" name="features" value="Ease of Use"> Ease of Use</label>
+                <label><input type="checkbox" id="performance" name="features" value="Performance"> Performance</label>
+                <label><input type="checkbox" id="design" name="features" value="Design"> Design</label>
+            </div>
         </fieldset>
 
         <label for="review">Written Review <small>(Optional)</small></label>
